# callsight-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.py  update-env.ps1  update-env.sh
.github/workflows/: ci.yml  deploy.yml  deployment.yml  integration.yml  test.yml  tests.yml
app/: cli.py  main.py
app/api/: deps.py
app/api/routes/: ai.py  analisis.py  analysis.py  audio.py  auth.py  categories.py  chatbot.py  companies.py  conversations.py  insights.py  reports.py  teams.py  tickets.py  topics.py  users.py
app/core/: config.py
app/db/: session.py
app/services/: analysis_service.py  audio_service.py  company_service.py  convert_audio.py  convert_audio_service.py  embeddings.py  input_service.py  report_service.py  storage_service.py  teams_service.py  transcription_service.py
app/services/call_analysis/: main.py  output.json  transcription.json
docs/: improvements.md  unit_testing.md
scripts/: update-env.sh
tests/: conftest.py  test_analysis_service.py  test_audio_processing.py  test_auth.py  test_chatbot.py  test_companies.py  test_conversations.py  test_convert_audio_service.py  test_dashboard.py  test_input_service.py  test_report_integration.py  test_report_routes.py  test_report_service.py  test_storage_service.py  test_tickets.py
